// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Users /> should render without users 1`] = `
<Card>
  <CardBody>
    <Title
      className="card-title"
      headingLevel="h3"
      size="lg"
    >
      Cluster administrative users
    </Title>
    <p>
      Grant permission to manage this cluster to users defined in your identity provider.
       
      <a
        href="https://docs.openshift.com/dedicated/4/administering_a_cluster/dedicated-admin-role.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more.
      </a>
    </p>
    <Button
      className="access-control-add"
      isDisabled={false}
      onClick={[Function]}
      variant="secondary"
    >
      Add user
    </Button>
    <AddUserDialog
      addUserResponse={
        Object {
          "error": false,
          "errorDetails": null,
          "errorMessage": "",
          "fulfilled": false,
          "pending": false,
        }
      }
      canAddClusterAdmin={false}
      clearAddUserResponses={[MockFunction]}
      closeModal={[MockFunction]}
      clusterID="1IztzhAGrbjtKkMbiPewJanhTXk"
      isOpen={false}
      submit={[MockFunction]}
    />
  </CardBody>
</Card>
`;

exports[`<Users /> with users should render 1`] = `
<Card>
  <CardBody>
    <Title
      className="card-title"
      headingLevel="h3"
      size="lg"
    >
      Cluster administrative users
    </Title>
    <p>
      Grant permission to manage this cluster to users defined in your identity provider.
       
      <a
        href="https://docs.openshift.com/dedicated/4/administering_a_cluster/dedicated-admin-role.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more.
      </a>
    </p>
    <Table
      actions={
        Array [
          Object {
            "className": "hand-pointer",
            "onClick": [Function],
            "title": "Delete",
          },
        ]
      }
      areActionsDisabled={[Function]}
      aria-label="Users"
      borders={true}
      canSelectAll={true}
      cells={
        Array [
          Object {
            "title": <React.Fragment>
              User ID
              <Popover
                appendTo={[Function]}
                aria-label="User IDs"
                bodyContent={
                  <p>
                    User IDs are matched by the cluster's identity providers.
                  </p>
                }
                boundary="window"
                className=""
                closeBtnAriaLabel="Close"
                distance={25}
                enableFlip={true}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                footerContent={null}
                headerContent={null}
                hideOnOutsideClick={true}
                isVisible={null}
                maxWidth="calc(1rem + 1rem + 18.75rem)"
                onHidden={[Function]}
                onHide={[Function]}
                onMount={[Function]}
                onShow={[Function]}
                onShown={[Function]}
                position="top"
                shouldClose={[Function]}
                tippyProps={Object {}}
                zIndex={9999}
              >
                <Button
                  isInline={true}
                  variant="plain"
                >
                  <HelpIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  />
                </Button>
              </Popover>
            </React.Fragment>,
          },
          Object {
            "title": <React.Fragment>
              Group
              <Popover
                appendTo={[Function]}
                aria-label="Groups"
                bodyContent={
                  <p>
                    Groups are mapped to role bindings on the cluster.
                     
                    For more information check the
                     
                    <a
                      href="https://docs.openshift.com/container-platform/latest/authentication/understanding-authentication.html"
                    >
                      OpenShift 4 documentation
                    </a>
                    .
                  </p>
                }
                boundary="window"
                className=""
                closeBtnAriaLabel="Close"
                distance={25}
                enableFlip={true}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                footerContent={null}
                headerContent={null}
                hideOnOutsideClick={true}
                isVisible={null}
                maxWidth="calc(1rem + 1rem + 18.75rem)"
                onHidden={[Function]}
                onHide={[Function]}
                onMount={[Function]}
                onShow={[Function]}
                onShown={[Function]}
                position="top"
                shouldClose={[Function]}
                tippyProps={Object {}}
                zIndex={9999}
              >
                <Button
                  isInline={true}
                  variant="plain"
                >
                  <HelpIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  />
                </Button>
              </Popover>
            </React.Fragment>,
          },
        ]
      }
      className=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        Array [
          Object {
            "cells": Array [
              "u1",
              "dedicated-admins",
            ],
            "userID": "u1",
          },
          Object {
            "cells": Array [
              "u2",
              "dedicated-admins",
            ],
            "userID": "u2",
          },
          Object {
            "cells": Array [
              "u2",
              "cluster-admins",
            ],
            "userID": "u2",
          },
          Object {
            "cells": Array [
              "u3",
              "cluster-admins",
            ],
            "userID": "u3",
          },
        ]
      }
      variant="compact"
    >
      <TableHeader />
      <Component />
    </Table>
    <Button
      className="access-control-add"
      isDisabled={false}
      onClick={[Function]}
      variant="secondary"
    >
      Add user
    </Button>
    <AddUserDialog
      addUserResponse={
        Object {
          "error": false,
          "errorDetails": null,
          "errorMessage": "",
          "fulfilled": false,
          "pending": false,
        }
      }
      canAddClusterAdmin={false}
      clearAddUserResponses={[MockFunction]}
      closeModal={[MockFunction]}
      clusterID="1IztzhAGrbjtKkMbiPewJanhTXk"
      isOpen={false}
      submit={[MockFunction]}
    />
  </CardBody>
</Card>
`;
